--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "wordle-helper.js",
   "scripts": {
-    "build": "python3 build-template.py index.js index.css template.html",
+    "build": "ninja",
     "watch": "watchexec -e js,css,html ninja"
   },
   "author": "",
