--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "wordle-helper",
   "version": "1.0.0",
   "description": "",
-  "exports": "src/index.js",
+  "exports": "./src/index.js",
   "type": "module",
   "scripts": {
     "build": "ninja",
+    "check": "tsc",
     "watch": "watchexec -e js,css,html ninja",
-    "format": "prettier --write src/*.js"
+    "format": "prettier --write src/*.js src/*.ts"
   },
   "author": "",
   "license": "MIT",
