--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "exports": "./src/index.js",
   "type": "module",
   "scripts": {
-    "build": "go build -o bin/ cmd/build_template && esbuild --minify --bundle --outdir=dist/ src/index.js src/index.css && ./bin/build_template.exe src/template.html dist/index.js dist/index.css dist/index.html",
-    "ninja": "ninja",
     "analyze:failures": "node ./dist/index.test.js startingWord --json > dist/failure-analysis.json",
+    "build": "go build -o bin/ cmd/build_template && esbuild --minify --bundle --outdir=dist/ src/index.js src/index.css && ./bin/build_template.exe src/template.html dist/index.js dist/index.css dist/index.html",
     "check": "tsc",
-    "watch": "watchexec -e js,css,html ninja",
-    "format": "prettier --write src/*.js src/*.ts src/*.html tools/*.js"
+    "format": "prettier --write src/*.js src/*.ts src/*.html tools/*.js",
+    "format:ci": "prettier --check src/*.js src/*.ts src/*.html tools/*.js",
+    "ninja": "ninja",
+    "precommit": "pnpm format:ci && pnpm check",
+    "test": "node ./dist/index.test.js",
+    "watch": "watchexec -e js,css,html ninja"
   },
   "author": "",
   "license": "MIT",
