--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "configure": "node ./tools/configure.js dist/index.html",
     "configure:out": "node ./tools/configure.js",
     "format": "prettier --write src/*.js src/*.ts src/*.html tools/*.js",
+    "format:go": "go fmt ./cmd/build/main.go",
     "format:ci": "prettier --check src/*.js src/*.ts src/*.html tools/*.js",
+    "lint:go": "go vet ./cmd/build/main.go && staticcheck ./cmd/build/main.go",
     "ninja": "ninja",
     "precommit": "pnpm format:ci && pnpm typecheck",
     "test": "node ./dist/index.test.js",
