--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^17.0.21",
     "esbuild": "^0.14.25",
     "prettier": "^2.5.1",
+    "terser": "^5.12.0",
     "typescript": "^4.6.2"
   }
 }
