--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --write src/*.js src/*.ts src/*.html tools/*.js",
     "format:go": "go fmt ./cmd/build/main.go",
     "format:ci": "prettier --check src/*.js src/*.ts src/*.html tools/*.js",
-    "lint:go": "go vet ./cmd/build/main.go && staticcheck ./cmd/build/main.go",
+    "lint:go": "go vet ./cmd/build/ && staticcheck ./cmd/build/",
     "ninja": "ninja",
     "precommit": "pnpm format:ci && pnpm typecheck",
     "test": "node ./dist/index.test.js",
