--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-fixedbitset = "0.4.1"
+fixedbitset = "0.4"
+rayon = "1.5"
 
 [profile.release] 
 debug = true
