--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "exports": "./src/index.js",
   "type": "module",
   "scripts": {
-    "analyze:failures": "node ./dist/index.test.js startingWord --json > dist/failure-analysis.json",
-    "build": "go build -o bin/ cmd/build_template && esbuild --minify --bundle --outdir=dist/ src/index.js src/index.css && ./bin/build_template.exe src/template.html dist/index.js dist/index.css dist/index.html",
+    "build": "pnpm configure && ninja",
     "typecheck": "tsc",
     "configure": "node ./tools/configure.js dist/index.html",
     "configure:out": "node ./tools/configure.js",
@@ -19,7 +18,7 @@
     "test": "node ./dist/index.test.js",
     "watch": "watchexec -e js,css,html ninja"
   },
-  "author": "",
+  "author": "Thomas Tay",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^17.0.21",
